add JSTL package

--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -51,6 +51,11 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>jstl-api</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>fwa-${project.version}</finalName>
