--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>net.coobird</groupId>
+      <artifactId>thumbnailator</artifactId>
+      <version>0.4.17</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>fwa-${project.version}</finalName>
